[gd_scene load_steps=5 format=3 uid="uid://dl6wrbha57kyf"]

[ext_resource type="Script" path="res://scenes/config/GameInfoEditor.gd" id="1_6huq3"]
[ext_resource type="Script" path="res://scenes/ui_nodes/AccessibilityFocus.gd" id="1_g3g03"]
[ext_resource type="Script" path="res://source/utils/SpinBoxHandler.gd" id="2_xpxl6"]
[ext_resource type="Script" path="res://source/utils/ScrollHandler.gd" id="3_e7sx0"]

[node name="Info" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6huq3")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="IntroLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Favorite?"

[node name="AccessibilityFocus" type="Node" parent="ScrollContainer/VBoxContainer/HBoxContainer/IntroLabel"]
script = ExtResource("1_g3g03")

[node name="Favorite" type="CheckButton" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Number of times played:"

[node name="AccessibilityFocus" type="Node" parent="ScrollContainer/VBoxContainer/HBoxContainer2/Label"]
script = ExtResource("1_g3g03")

[node name="NumTimesPlayed" type="SpinBox" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true

[node name="SpinBoxHandler" type="Control" parent="ScrollContainer/VBoxContainer/HBoxContainer2/NumTimesPlayed"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_xpxl6")

[node name="AccessibilityFocus" type="Node" parent="ScrollContainer/VBoxContainer/HBoxContainer2/NumTimesPlayed"]
script = ExtResource("1_g3g03")
next = NodePath("../../../HBoxContainer/IntroLabel")

[node name="ScrollHandler" type="Control" parent="ScrollContainer"]
layout_mode = 2
script = ExtResource("3_e7sx0")

[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer/Favorite" to="." method="_on_change_ocurred"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/HBoxContainer2/NumTimesPlayed" to="." method="_on_change_ocurred"]
